syntax = "proto3";

package go.micro.srv.courses;
option go_package="course";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Service declares all RPC calls for courses related functions.
service CourseService {
	// Course related rpcs
	rpc UpsertCourse (UpsertCourseReq) returns (UpsertCourseRsp);
	rpc InsertCourses (Courses) returns (InsertCoursesRsp);
	rpc UpdateCourses (Courses) returns (UpdateCoursesRsp);
	rpc FindCourses (FindCoursesReq) returns (FindCoursesRsp);
	rpc DeleteCoursesByIDs (IDs) returns (DeleteCoursesRsp);
    // Category related rpcs
    rpc SyncCategories (SyncCategoriesReq) returns (Courses);
    rpc AddCategories (AddCategoriesReq) returns (Courses);
    rpc DeleteCategories (DeleteCategoriesReq) returns (Courses);
    rpc PurgeCategories (PurgeCategoriesReq) returns (Courses);
}

message UpsertCourseReq {
	Course course = 1;
	bool is_new = 2;
}

message UpsertCourseRsp {
	Course course = 1;
	int64 inserted = 2;
	int64 updated = 3;
}

message InsertCoursesRsp {
	int64 inserted = 1;
}

message DeleteCoursesRsp {
    int64 deleted = 1;
}

message IDs {
    repeated string ids = 1;
}

message UpdateCoursesRsp {
    int64 updated = 1;
}

message FindCoursesRsp {
	repeated Course courses = 1;
}

message Courses {
	repeated Course courses = 1;
}

message FindCoursesReq {
    repeated string ids = 1;
    string query = 2;
    google.protobuf.Timestamp start = 3;
    google.protobuf.Timestamp end = 4;
    bool inclusive = 5;
    bool hidden = 6;
    repeated string sort = 7;
    int64 per_page = 8;
    int64 current_page = 9;
}

message CourseAndCategories {
    // @inject_tag: valid:"uuid,required~ID is required"
    string course_id = 1;
    repeated string category_ids = 2;
}

message SyncCategoriesReq {
    repeated CourseAndCategories course_and_categories = 1;
}

message AddCategoriesReq {
    repeated CourseAndCategories course_and_categories = 1;
}

message DeleteCategoriesReq {
    repeated CourseAndCategories course_and_categories = 1;
}

message PurgeCategoriesReq {
    repeated CourseAndCategories course_and_categories = 1;
}

// Course defines data structure of Course.
message Course {
    // @inject_tag: bson:"_id" valid:"uuid,required~ID is required"
	string ID = 1;
    // @inject_tag: bson:"name" valid:"required~name is required,length(1|256)~name must be max 256 characters"
	string name = 2;
    // @inject_tag: valid:"required~Slug is required"
	string slug = 3;
	// @inject_tag: bson:"display_order"
	uint64 display_order = 4;
    // @inject_tag: valid:"required~Description is required"
	string description = 5;
	bool hidden = 6;
    // @inject_tag: valid:"required~Start date time is required"
	google.protobuf.Timestamp start = 7;
    // @inject_tag: valid:"required~End date time is required"
	google.protobuf.Timestamp end = 8;
	// @inject_tag: bson:"created_at"
	google.protobuf.Timestamp created_at = 9;
	// @inject_tag: bson:"updated_at"
	google.protobuf.Timestamp updated_at = 10;
	// @inject_tag: bson:"category_ids"
	repeated string category_ids = 11;
}

